@@ -1,6 +1,7 @@
 unibilium (1.2.1-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Bump debhelper compat to 10
 
  -- James McCoy <jamessan@debian.org>  Thu, 14 Sep 2017 21:00:04 -0400
 
